// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filters: Component should render correctly 1`] = `
<LoadingWrapper
  error={null}
  loading={false}
  noData={false}
  noDataContent={null}
>
  <Component />
</LoadingWrapper>
`;

exports[`Filters: Component should render correctly with loader 1`] = `
<LoadingWrapper
  error={null}
  loading={true}
  noData={false}
  noDataContent={null}
>
  <Component />
</LoadingWrapper>
`;
